# 20th-TruePay

./: .dockerignore  .env.docker.example  .env.example  .gitignore  =1.14.6  =2.13.0  =45.0.6  COMPONENT_SYSTEM.md  DOCKER_README.md  Dockerfile  Dockerfile.optimized  NGROK-README.md  README.md  crontab_ticket_notifications.txt  docker-check.sh  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  docker-stop.sh  frontend-build.sh  main.py  makefile  manage.py  nginx.conf  ngrok-manager.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_newebpay_callback.py  test_newebpay_decrypt.py  vite.config.js
.claude/: settings.local.json
Merchant/: urls.py  views.py
MerchantAcount/: apps.py  models.py  urls.py  views.py
accounts/: adaptor.py  models.py
customers_account/: admin.py  apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
embed_system/: apps.py  embedREAD.MD  urls.py  views.py
linepay/: apps.py  models.py  url.py  urls.py  views.py
merchant_account/: apps.py  cloudflare_service.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py
merchant_marketplace/: admin.py  apps.py  forms.py  models.py  public_urls.py  storage_backends.py  tasks.py  urls.py  validators.py  views.py
newebpay/: apps.py  models.py  urls.py  utils.py  views.py
orders/: admin.py  models.py  urls.py
pages/: urls.py  views.py
payments/: admin.py  apps.py  linepay.py  models.py  newebpay.py  tasks.py  urls.py  views.py
public_store/: apps.py  urls.py  views.py
(+223 files in other folders)
