[project]
name = "truepay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.13",
    "cryptography>=45.0.6",
    "django>=5.2.5",
    "django-debug-toolbar>=6.0.0",
    "django-storages>=1.14.6",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
